--- a/Debate Website/css/style.css
+++ b/Debate Website/css/style.css
@@ -8,6 +8,15 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 
+
+/*ourteam new member info*/
+.newmeminfo{
+	font-size: 20px;
+}
+
+
+
+
 /* Basic */
 
 	body {
@@ -546,12 +555,16 @@
 			float: left;
 			padding: 0 1.5em 1em 0;
 			top: 0.25em;
+			height: 200px;
+			width:200px;
 		}
 
 		.image.right {
 			float: right;
 			padding: 0 0 1em 1.5em;
 			top: 0.25em;
+			height: 200px;
+			width:200px;
 		}
 
 		.image.left, .image.right {
